--- a/01-drumkit/index.html
+++ b/01-drumkit/index.html
@@ -50,6 +50,7 @@
       const keys = Array.from(document.querySelectorAll('.key'))
       keys.forEach(key => key.addEventListener('transitionend', removeTransition))
       window.addEventListener('keydown', playSound)
+      window.addEventListener('touchstart', playSound)
     </script>
   </body>
 </html>
